# LearnBlock

./: .abstruse.yml  .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  EBO nos imita.blockProject  EBO.xml  EBO2.xml  EBO2World.xml  EBO_components_setup.py  EBO_laberinto.xml  EBO_new.xml  EBO_world.xml  EBO_world_lines.xml  EBO_world_lines_box.xml  EBO_world_obstacles.xml  EBO_world_obstacles2.xml  EBO_world_tags.xml  EBO_world_walls.xml  EBO_world_walls2.xml  Evitar_obstaculos.blockProject  Imitar_Emociones.blockProject  Learnblock.desktop  Mueve recto para si hay obstaculo.blockProject  Muevete segun marcas.blockProject  PULL_REQUEST_TEMPLATE  README.md  a.blockProject  case_camera.ive  deployment.sh  files.txt  follow_black_line.blockProject  follow_red_line_10sec.blockProject  follow_red_line_with_events.blockProject  follow_red_line_with_functions.blockProject  followface.blockProject  install.desktop  learnblock_setup.py  learnbot_components_setup.py  learnbot_dsl_setup.py  (+15 more)
EBO_components/: startComponents
IPT/: BackCase.ipt  Base.ipt  Board 16 pwm.ipt  CameraCase.ipt  Ensamblaje.iam  Laser.ipt  Pieza1.ipt  Pitft 3.5.ipt  Shield.ipt  Soport Raspberry.ipt  Voltage regulator.ipt  Wheel.ipt  ball.ipt  d24v50f5-step-down-voltage-regulator.ipt  drv8835-dual-motor-driver-carrier.ipt  pololu 8835.ipt  servo motor.ipt  servo pulley.ipt  spacer 3mm.ipt  vl53l0x-and-vl53l1x-carrier-model.ipt
PCBshield/: shield EBO.brd
STL/: BackCase.stl  Base.stl  CameraCase.stl  Front Case.stl  Soport Raspberry.stl
cmake/: learnbot.cmake
doc/: README.md  doc.md  learnblock.md
(+1485 files in other folders)
